# practice4-tracking

./: .travis.yml  CMakeLists.txt  README.md
code/: CMakeLists.txt  build-and-test.sh
code/template/: CMakeLists.txt
code/template/application/: main.cpp
code/template/src/: auxiliaries.cpp  img_proc.cpp
dataset/: car.txt  caviar.txt  panda.txt  pedestrian.txt  stone.txt
include/: tracker.hpp
samples/: benchmark.hpp  gui.hpp  tracker.cpp  tracker_dummy.cpp  tracker_median_flow_Makarova.cpp  trackers_fabrics.cpp  trackers_factory.cpp  tracking_sample.cpp
